- Updated - transients consistent naming
- Updated - all WooCommerce related code moved to external extension
- Updated - Group: Marquee refactored to use only 1 group container / added support for vertical sliding, reverse, pause, alternate
- Updated - core/social-links styles (class naming, selectors and css specificity updates)
- Removed - heading/paragraphs spacing
- Fixed - PHP notices with inc/config/config.php
- Fixed - wide align on Media & Text pattern (left image alignment)
- Fixed - offcanvas container background inside core/navigation block
- Fixed - core/button styles output to correct classname from block supports
- Fixed - issue with Yoast's Support term view not passing data to correct template (when primary is selected)
- Added - new Admin\Settings class to manage theme settings (with get/set/all static methods)
- Added - new badge pattern (element)
- Added - script translations for admin/gutenberg JavaScript
- Added - support for RankMath / FAQ block as accordion (using details tag)
- Added - Admin\Upgrade class to handle future theme upgrades

v6.1.1
- Updated - RO local translations (page-soon.php pattern)
- Fixed - class-separator.php translation function wrong usage
- Fixed - class-template.php (post) fatal error on search page with no results

v6.1.0
- Fixed - remove Gutenberg plugin deactivation - not allowed

v6.0.8/9
- Removed - section.php pattern and section-markquee.php pattern
- Updated - header/footer.html patterns navigation attributes adjustments
- Updated - Navigation blocks scripts handle names to be inline with WP naming
- Updated - Elements pattern types prefixed with 'el-' and moved certain patterns to html files
- Fixed - Navigation offcanvas script when empty navigation is used
- Added - core/group marquee block variation

v6.0.7
- Fixed - Issue with dropdown styles not being added when core/page-list block is used (empty navigation)

v6.0.6